###############################################################################
cmake_minimum_required(VERSION 3.20)
###############################################################################
project(bl808 LANGUAGES C ASM)
###############################################################################
add_library(bl808_cpu STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_cpu PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/risc-v/rv_hart.c)
target_sources(bl808_cpu PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/risc-v/rv_pmp.c)
target_include_directories(bl808_cpu PUBLIC soc/bl808/bl808_e907_std/bl808_bsp_driver/risc-v/Core/Include)
target_include_directories(bl808_cpu PUBLIC soc/bl808/bl808_e907_std/bl808_bsp_driver/risc-v)
###############################################################################
add_library(bl808_registers INTERFACE)
target_include_directories(bl808_registers INTERFACE soc/bl808/bl808_e907_std/bl808_bsp_driver/regs)
target_link_libraries(bl808_registers INTERFACE bl808_startup)
target_link_libraries(bl808_registers INTERFACE bl808_cpu)
###############################################################################
add_library(bl808_hal STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_hal PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/hal_drv/src/hal_uart.c)
target_include_directories(bl808_hal PUBLIC soc/bl808/bl808_e907_std/bl808_bsp_driver/hal_drv/inc)
target_link_libraries(bl808_hal PUBLIC bl808_std_drv)
target_link_libraries(bl808_hal PUBLIC bl808_common_device)
###############################################################################
add_library(bl808_common_list INTERFACE)
target_include_directories(bl808_common_list INTERFACE soc/bl808/bl808_e907_std/common/list)
###############################################################################
add_library(bl808_common_device STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_common_device PRIVATE soc/bl808/bl808_e907_std/common/device/drv_device.c)
target_include_directories(bl808_common_device PUBLIC soc/bl808/bl808_e907_std/common/device)
target_link_libraries(bl808_common_device PUBLIC bl808_common_list)
###############################################################################
add_library(bl808_common_misc STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_common_misc PRIVATE soc/bl808/bl808_e907_std/common/misc/misc.c)
target_include_directories(bl808_common_misc PUBLIC soc/bl808/bl808_e907_std/common/misc)
###############################################################################
add_library(bl808_bsp_common_ring_buffer STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_bsp_common_ring_buffer PRIVATE soc/bl808/bl808_e907_std/BSP_Common/ring_buffer/ring_buffer.c)
target_include_directories(bl808_bsp_common_ring_buffer PUBLIC soc/bl808/bl808_e907_std/BSP_Common/ring_buffer)
target_link_libraries(bl808_bsp_common_ring_buffer PUBLIC bl808_bflb_bsp_driver_glue)
###############################################################################
add_library(bl808_common_bflb_platform STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_common_bflb_platform PRIVATE soc/bl808/bl808_e907_std/BSP_Common/bflb_platform/platform_device.c)
target_sources(bl808_common_bflb_platform PRIVATE soc/bl808/bl808_e907_std/BSP_Common/bflb_platform/platform_gpio.c)
target_include_directories(bl808_common_bflb_platform PUBLIC soc/bl808/bl808_e907_std/BSP_Common/bflb_platform)
# target_link_libraries(bl808_common_bflb_platform PRIVATE bl808_hal)
target_link_libraries(bl808_common_bflb_platform PRIVATE bl808_std_drv)
target_link_libraries(bl808_common_bflb_platform PRIVATE bl808_bsp_common_ring_buffer)
###############################################################################
add_library(bl808_bflb_bsp_driver_glue INTERFACE)
target_include_directories(bl808_bflb_bsp_driver_glue INTERFACE soc/bl808/bl808_e907_std)
target_link_libraries(bl808_bflb_bsp_driver_glue INTERFACE bl808_std_drv)
###############################################################################
add_library(bl808_common_softcrc STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_common_softcrc PRIVATE soc/bl808/bl808_e907_std/BSP_Common/soft_crc/softcrc.c)
target_include_directories(bl808_common_softcrc PUBLIC soc/bl808/bl808_e907_std/BSP_Common/soft_crc)
target_link_libraries(bl808_common_softcrc PRIVATE bl808_std_drv)
target_link_libraries(bl808_common_softcrc PRIVATE bl808_startup)
target_link_libraries(bl808_common_softcrc PRIVATE bl808_bflb_bsp_driver_glue)
###############################################################################
add_library(bl808_std_drv STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_acomp.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_adc.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_aon.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_audio.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_aupdm.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_cam.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_can.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_clock.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_common.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dac.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dbi.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dma.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dma2d.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dsi.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dsp2.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dsp2_axi_ctrl.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dsp2_misc.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dsp2_wdr.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_dvp_tsrc.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_ef_cfg.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_ef_ctrl.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_emac.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_glb.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_glb_gpio.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_glb_misc.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_glb_pll.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_hbn.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_i2c.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_i2s.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_ipc.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_ir.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_iso11898.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_l1c.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_lz4d.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_mfg_efuse.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_mfg_flash.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_mfg_media.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_mjdec.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_mjpeg.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_osd_blend.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_osd_draw.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_osd_probe.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_pds.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_psram.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_psram_uhs.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_pwm.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_romapi_e907.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_romapi_patch.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_romdriver_e907.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_sdh.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_sec_dbg.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_sec_eng.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_sf_cfg.c)
# target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_sf_cfg_ext.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_sf_ctrl.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_sflash.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_spi.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_timer.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_touch.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_tzc_sec.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_uart.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_uhs_phy.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_usb.c)
target_sources(bl808_std_drv PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/bl808_xip_sflash.c)
target_include_directories(bl808_std_drv PUBLIC soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/inc)
target_link_libraries(bl808_std_drv PRIVATE bl808_system)
target_link_libraries(bl808_std_drv PUBLIC bl808_registers)
target_link_libraries(bl808_std_drv PUBLIC bl808_common_misc)
target_link_libraries(bl808_std_drv PRIVATE bl808_common_softcrc)
###############################################################################
add_library(bl808_startup STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_startup PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source/GCC/start_load.c)
target_sources(bl808_startup PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source/GCC/startup.S)
target_sources(bl808_startup PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source/GCC/vectors.S)
target_include_directories(bl808_startup PUBLIC soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source)
target_link_libraries(bl808_startup PRIVATE bl808_cpu)
target_link_libraries(bl808_startup PRIVATE bl808_registers)
###############################################################################
add_library(bl808_system STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_system PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source/system_bl808.c)
target_sources(bl808_system PRIVATE soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source/interrupt.c)
# target_include_directories(bl808_system PUBLIC soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source)
target_link_libraries(bl808_system PUBLIC bl808_cpu)
target_link_libraries(bl808_system PRIVATE bl808_common_misc)
target_link_libraries(bl808_system PRIVATE bl808_registers)
target_link_libraries(bl808_system PRIVATE bl808_std_drv)
target_link_libraries(bl808_system PRIVATE bl808_common_bflb_platform)
###############################################################################
add_library(bl808_hosal STATIC EXCLUDE_FROM_ALL)
target_sources(bl808_hosal PRIVATE hosal/bl808_e907_hal/bl_irq.c)
target_link_libraries(bl808_hosal PRIVATE bl808_std_drv)
###############################################################################
